Fix navbar overlap on mobile

--- a/style.css
+++ b/style.css
@@ -87,9 +87,14 @@ html {
         height: auto;
     }
 
+    .navbar .navbar-left {
+      flex: auto;
+    }
+
     .navbar .navbar-center {
       padding-top: 16px;
       padding-bottom: 16px;
+      flex: auto;
     }
 }
 
